--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,10 @@
-/* This file is for your main application css. */
+@import "./bulma.css";
 
-@import "./phoenix.css";
+.phx-connected {
+  height: 100%;
+}
+
+#map {
+  width: 100%;
+  height: 90vh;
+}
