--- a/lib/web/templates/layout/_header.html.slim
+++ b/lib/web/templates/layout/_header.html.slim
@@ -1,7 +1,4 @@
-section.container
-  nav role="navigation"
-    ul
-      li
-        a href="https://www.phoenixframework.org/docs" Get Started
-  a.phx-logo href="https://phoenixframework.org/"
-    img src=Routes.static_path(@conn, "/images/phoenix.png") alt="Phoenix Framework Logo"
+.navbar
+  .navbar-brand 
+    .navbar-item
+      .h1.title Verkehrsunfälle Köln
