--- a/lib/web/templates/layout/app.html.slim
+++ b/lib/web/templates/layout/app.html.slim
@@ -5,12 +5,12 @@ html lang="en"
     meta http-equiv="X-UA-Compatible" content="IE=edge"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     title App
+    link href="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.css" rel="stylesheet"
     link rel="stylesheet" href=Routes.static_path(@conn,"/css/app.css")
   body
-    header
-      = render "_header.html", assigns
-    main.container role="main"
-      = render "_flashes.html", assigns
-      = render @view_module, @view_template, assigns
+    = render "_header.html", assigns
+    = render "_flashes.html", assigns
+    = render @view_module, @view_template, assigns
     = csrf_meta_tag()
+    script src="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.js"
     script type="text/javascript" src=Routes.static_path(@conn,"/js/app.js")
