--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,10 +1,35 @@
 @import "./bulma.css";
 
-.phx-connected {
-  height: 100%;
+.columns {
+  height: calc(100vh - (3.25rem));
+  flex-grow: 1;
 }
 
 #map {
-  width: 100%;
-  height: 90vh;
+  height: 100%;
+}
+
+@media (min-width: 769px) {
+  .hero-body {
+    padding: 0 0 0 1.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .is-narrow {
+    flex: none;
+    padding: 0 1.5rem;
+  }
+
+  .columns {
+    flex-direction: column;
+  }
+
+  .hero-body {
+    padding: 0;
+  }
+
+  #accidentFilter {
+    display: none;
+  }
 }
