--- a/lib/web/templates/map/_header.html.slim
+++ b/lib/web/templates/map/_header.html.slim
@@ -1,4 +1,8 @@
 .navbar
   .navbar-brand 
     .navbar-item
-      .h1.title Verkehrsunfälle Köln
+      .title Verkehrsunfälle Köln
+    a.navbar-burger#filterToggle role="button" aria-label="menu" aria-expanded="false" onclick="toggleFilter()"
+      span aria-hidden="true"
+      span aria-hidden="true"
+      span aria-hidden="true"
