--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,32 +1,43 @@
 @import "./bulma.css";
 
+.hero-body {
+  padding: 0;
+}
+
 .columns {
   height: calc(100vh - (3.25rem));
   flex-grow: 1;
+}
+
+.column {
+  padding: 0;
+}
+
+.is-narrow {
+  padding: 2rem;
+  padding-left: 2.5rem;
 }
 
 #map {
   height: 100%;
 }
 
-@media (min-width: 769px) {
-  .hero-body {
-    padding: 0 0 0 1.5rem;
-  }
+#accidentFilter {
+  display: block;
 }
 
 @media (max-width: 768px) {
   .is-narrow {
     flex: none;
-    padding: 0 1.5rem;
+    padding: 0;
+  }
+
+  #accidentFilter {
+    padding: 0 1.5rem 1.5rem 1.5rem;
   }
 
   .columns {
     flex-direction: column;
-  }
-
-  .hero-body {
-    padding: 0;
   }
 
   #accidentFilter {
