--- a/lib/web/templates/map/_form.html.slim
+++ b/lib/web/templates/map/_form.html.slim
@@ -16,4 +16,4 @@
         = multiple_select f, :vb2, ["KFZ": 1, "Rad": 2, "Fuß": 3, "Bus & Bahn": 4], size: 4, selected: @form.data.vb2, autocomplete: "off"
   .field
     .control.is-expanded
-      button.button.is-link Submit
+      button#accidentFilterSubmitBtn.button.is-link Submit
