--- a/lib/web/templates/map/_form.html.slim
+++ b/lib/web/templates/map/_form.html.slim
@@ -11,7 +11,7 @@
         = multiple_select f, :vb1, ["KFZ": 1, "Rad": 2, "Fuß": 3, "Bus & Bahn": 4], size: 4, selected: @form.data.vb1, autocomplete: "off"
   .field
     .control.is-expanded
-      label.label Unfallbeteiliger
+      label.label Unfallbeteiligter
       .select.is-multiple.is-fullwidth
         = multiple_select f, :vb2, ["KFZ": 1, "Rad": 2, "Fuß": 3, "Bus & Bahn": 4], size: 4, selected: @form.data.vb2, autocomplete: "off"
   .field
