--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,11 +1,32 @@
 @import "./bulma.css";
 
+body {
+  overflow: hidden;
+}
+
 .hero-body {
   padding: 0;
 }
 
+.hero-foot .container {
+  max-height: 5rem;
+  height: 5rem;
+}
+
+.navbar {
+  min-height: 3rem;
+}
+
+.navbar-brand {
+  padding-left: 1rem;
+}
+
+.logo {
+  padding-top: 1rem;
+}
+
 .columns {
-  height: calc(100vh - (3.25rem));
+  height: calc(100vh - (4rem + 4rem));
   flex-grow: 1;
 }
 
@@ -13,9 +34,15 @@
   padding: 0;
 }
 
-.is-narrow {
+.column-form {
+  flex: none;
   padding: 2rem;
   padding-left: 2.5rem;
+  overflow: scroll;
+}
+
+.column-form form {
+  height: calc(100vh - (4rem + 8rem));
 }
 
 #map {
@@ -26,10 +53,37 @@
   display: block;
 }
 
+.footer {
+  padding: 0;
+  padding-top: 1rem;
+}
+
 @media (max-width: 768px) {
-  .is-narrow {
+  .navbar-item {
+    padding-right: 0;
+  }
+
+  .hero-foot .container {
+    height: 5rem;
+  }
+
+  .columns {
+    height: calc(100vh - (4rem + 4rem));
+    flex-grow: 1;
+  }
+
+  #filterToggle {
+    margin-left: 0;
+  }
+
+  .navbar-brand {
+    padding-left: 0rem;
+  }
+
+  .column-form {
     flex: none;
     padding: 0;
+    height: initial;
   }
 
   #accidentFilter {
