--- a/lib/web/templates/map/_form.html.slim
+++ b/lib/web/templates/map/_form.html.slim
@@ -1,19 +1,20 @@
-= form_for @form, Routes.map_url(@conn, :data), [id: "accidentFilter", as: "q"], fn f ->
-  .field
-    .control.is-expanded
-      label.label Jahr des Unfalls
-      .select.is-multiple.is-fullwidth
-        = multiple_select f, :years, ["2017": 2017, "2016": 2016, "2015": 2015, "2014": 2014, "2013": 2013], size: 5, selected: @form.data.years
-  .field
-    .control.is-expanded
-      label.label Unfallverursacher
-      .select.is-multiple.is-fullwidth
-        = multiple_select f, :vb1, ["KFZ": 1, "Rad": 2, "Fuß": 3, "Bus & Bahn": 4], size: 4, selected: @form.data.vb1, autocomplete: "off"
-  .field
-    .control.is-expanded
-      label.label Unfallbeteiligter
-      .select.is-multiple.is-fullwidth
-        = multiple_select f, :vb2, ["KFZ": 1, "Rad": 2, "Fuß": 3, "Bus & Bahn": 4], size: 4, selected: @form.data.vb2, autocomplete: "off"
-  .field
-    .control.is-expanded
-      button#accidentFilterSubmitBtn.button.is-link Submit
+.form-container
+  = form_for @form, Routes.map_url(@conn, :data), [id: "accidentFilter", as: "q"], fn f ->
+    .field
+      .control.is-expanded
+        label.label Jahr des Unfalls
+        .select.is-multiple.is-fullwidth
+          = multiple_select f, :years, ["2017": 2017, "2016": 2016, "2015": 2015, "2014": 2014, "2013": 2013], size: 5, selected: @form.data.years
+    .field
+      .control.is-expanded
+        label.label Unfallverursacher
+        .select.is-multiple.is-fullwidth
+          = multiple_select f, :vb1, ["KFZ": 1, "Rad": 2, "Fuß": 3, "Bus & Bahn": 4], size: 4, selected: @form.data.vb1, autocomplete: "off"
+    .field
+      .control.is-expanded
+        label.label Unfallbeteiligter
+        .select.is-multiple.is-fullwidth
+          = multiple_select f, :vb2, ["KFZ": 1, "Rad": 2, "Fuß": 3, "Bus & Bahn": 4], size: 4, selected: @form.data.vb2, autocomplete: "off"
+    .field
+      .control.is-expanded
+        button#accidentFilterSubmitBtn.button.is-link Submit
