--- a/lib/web/templates/map/_header.html.slim
+++ b/lib/web/templates/map/_header.html.slim
@@ -1,7 +1,9 @@
 .navbar
-  .navbar-brand 
+  .navbar-brand
+    a.navbar-item.logo href="https://adfc.koeln"
+      img src=Routes.static_path(@conn, "/images/logo.png")
     .navbar-item
-      .title Verkehrsunfälle Köln
+      .is-size-4 Verkehrsunfälle Köln
     a.navbar-burger#filterToggle role="button" aria-label="menu" aria-expanded="false" onclick="toggleFilter()"
       span aria-hidden="true"
       span aria-hidden="true"
