--- a/lib/web/templates/map/_form.html.slim
+++ b/lib/web/templates/map/_form.html.slim
@@ -2,8 +2,8 @@ button#toggleFilterBtn.button.is-light onclick="toggleFilter()" Filter
 
 = form_for @form, Routes.map_url(@conn, :data), [id: "accidentFilter", as: "q", onsubmit: "return fetchData(event)"], fn f ->
   .field.checkbox
-    input type="checkbox" onclick="toggleHeatmap()"
-    label Heatmap
+    input#toggleHeatmapInput type="checkbox" onclick="toggleHeatmap()"
+    label for="toggleHeatmapInput" Heatmap
   .field
     .control.is-expanded
       label.label Jahr des Unfalls
