Added GitHub to Footer

--- a/lib/web/templates/map/_footer.html.slim
+++ b/lib/web/templates/map/_footer.html.slim
@@ -1,4 +1,5 @@
 .links
   a href="http://impressum.adfc.koeln" Impressum
   a href="http://datenschutz.adfc.koeln" Datenschutz
+  a href="https://github.com/PJUllrich/Uebersicht-Verkehrsunfaelle-Koeln" GitHub
 p © 2020 ADFC Kreisverband Köln e. V. 
