--- a/lib/web/templates/map/_form.html.slim
+++ b/lib/web/templates/map/_form.html.slim
@@ -13,12 +13,12 @@ button#toggleFilterBtn.button.is-light onclick="toggleFilter()" Filter
     .control.is-expanded
       label.label 1. Unfallbeteiligter
       .select.is-multiple.is-fullwidth
-        = multiple_select f, :vb1, ["KFZ": 1, "LKW": 2, "Rad": 3, "Fuß": 4, "Bus & Bahn": 5], size: 5, selected: @form.data.vb1, autocomplete: "off"
+        = multiple_select f, :vb1, ["PKW/Krad": 1, "LKW": 2, "Rad": 3, "Fuß": 4, "Bus & Bahn": 5], size: 5, selected: @form.data.vb1, autocomplete: "off"
   .field
     .control.is-expanded
       label.label 2. Unfallbeteiligter
       .select.is-multiple.is-fullwidth
-        = multiple_select f, :vb2, ["KFZ": 1, "LKW": 2, "Rad": 3, "Fuß": 4, "Bus & Bahn": 5], size: 5, selected: @form.data.vb2, autocomplete: "off"
+        = multiple_select f, :vb2, ["PKW/Krad": 1, "LKW": 2, "Rad": 3, "Fuß": 4, "Bus & Bahn": 5, "Keiner/Alleinunfall": 0], size: 6, selected: @form.data.vb2, autocomplete: "off"
   .field
     .control.is-expanded
       label.label Unfallschwere
