Fix some css stuff. Add meta-info

--- a/lib/web/templates/map/_header.html.slim
+++ b/lib/web/templates/map/_header.html.slim
@@ -3,4 +3,4 @@
     a.navbar-item.logo href="https://adfc.koeln"
       img src=Routes.static_path(@conn, "/images/logo.png")
     .navbar-item
-      .is-size-4 Verkehrsunfälle Köln
+      .navbar-title Verkehrsunfälle mit Verunglückten in Köln
