--- a/lib/web/templates/map/_header.html.slim
+++ b/lib/web/templates/map/_header.html.slim
@@ -1,6 +1,6 @@
 .navbar
   .navbar-brand
-    a.navbar-item.logo href="https://adfc.koeln"
+    a.navbar-item.logo href="http://adfc.koeln"
       img src=Routes.static_path(@conn, "/images/logo.png")
     .navbar-item
       .navbar-title Verkehrsunfälle mit Verunglückten in Köln
