--- a/lib/web/templates/map/_header.html.slim
+++ b/lib/web/templates/map/_header.html.slim
@@ -1,6 +1,6 @@
 .navbar
   .navbar-brand
     a.navbar-item.logo href="http://adfc.koeln"
-      img src=Routes.static_path(@conn, "/images/logo.png")
+      img src=Routes.static_path(@conn, "/images/logo.png") alt="Logo des ADFC Köln"
     .navbar-item
-      .navbar-title Verkehrsunfälle mit Verunglückten in Köln
+      h1.navbar-title Verkehrsunfälle mit Verunglückten in Köln
