--- a/lib/web/templates/layout/app.html.slim
+++ b/lib/web/templates/layout/app.html.slim
@@ -4,7 +4,7 @@ html lang="en"
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=edge"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    meta name="description" content="Interaktive Übersicht der Verkehrsunfälle mit Verunglückten in Köln von 2013 bis 2020 basierend auf Unfalldaten der Polizei NRW, erstellt durch den ADFC Köln."
+    meta name="description" content="Interaktive Übersicht der Verkehrsunfälle mit Verunglückten in Köln basierend auf Unfalldaten der Polizei NRW. Ein Projekt des ADFC Köln."
     title Verkehrsunfälle Köln - Eine Übersicht des ADFC Köln
     link href="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.css" rel="stylesheet"
     link rel="stylesheet" href=Routes.static_path(@conn,"/css/app.css")
