--- a/lib/web/templates/map/_footer.html.slim
+++ b/lib/web/templates/map/_footer.html.slim
@@ -2,4 +2,4 @@
   a href="http://impressum.adfc.koeln" Impressum
   a href="http://datenschutz.adfc.koeln" Datenschutz
   a href="https://github.com/PJUllrich/Uebersicht-Verkehrsunfaelle-Koeln" GitHub
-p Datenquelle: Verkehrsunfallstatistik der Polizei Köln | © #{Date.utc_today().year} ADFC Kreisverband Köln e. V. 
+p Datenquelle: Verkehrsunfallstatistik der Polizei Köln | © #{Date.utc_today().year} ADFC Kreisverband Köln e. V.  | Icons made by <a href="http://www.freepik.com/" title="Freepik">Freepik</a>
