--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -1,4 +1,5 @@
 @import "bulma"
+@import "~tippy.js/dist/tippy.css"
 
 .navbar
   overflow: auto
@@ -34,6 +35,10 @@
         .checkbox label
           padding-left: 0.4rem
 
+        .sprite-info
+          width: 0.9rem
+          margin-left: 0.3rem
+
     &-map
       flex: 1
 
@@ -55,6 +60,13 @@
 
 #toggleFilterBtn
   display: none
+
+th.vertical-row-header
+  writing-mode: vertical-rl
+  border: none !important
+
+.mapboxgl-popup-content
+  width: 23rem
 
 @media (max-width: $tablet)
   .navbar
