Fix table header issue in Safari iOS

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -62,7 +62,7 @@
   display: none
 
 th.vertical-row-header
-  writing-mode: vertical-rl
+  writing-mode: tb-rl
   border: none !important
 
 .mapboxgl-popup-content
