Fix table header

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -61,9 +61,20 @@
 #toggleFilterBtn
   display: none
 
-th.vertical-row-header
-  writing-mode: tb-rl
-  border: none !important
+.horizontal-header
+  text-align: center !important
+
+.vertical-header
+  vertical-align: middle !important
+  text-align: center
+
+  &-content
+    writing-mode: tb-rl
+    border: none !important
+
+tr:last-child td, .content table tbody tr:last-child th
+  border: 1px solid #dbdbdb !important
+  border-width: 0 0 1px !important
 
 .mapboxgl-popup-content
   width: 23rem
