Add statistic summary

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -41,6 +41,12 @@
 
     &-map
       flex: 1
+      position: relative
+
+      #statistic
+        position: absolute
+        top: 1rem
+        left: 1rem
 
       #map
         height: 100%
@@ -66,7 +72,6 @@
 
 .vertical-header
   vertical-align: middle !important
-  text-align: center
 
   &-content
     writing-mode: tb-rl
@@ -78,9 +83,13 @@ tr:last-child td, .content table tbody tr:last-child th
   border-width: 0 0 1px !important
 
 .mapboxgl-popup-content
+  font: 12px/20px Helvetica Neue,Arial,Helvetica,sans-serif
   width: 23rem
 
 @media (max-width: $tablet)
+  .summary-table td, .summary-table th
+    padding: 0.1em 0 !important
+
   .navbar
     padding: 0
 
