--- a/lib/web/templates/map/index.html.slim
+++ b/lib/web/templates/map/index.html.slim
@@ -8,6 +8,7 @@
         = render "_form.html", assigns
       .content-column.content-map
         #map
+        = render "_summary.html", assigns
 
   .hero-foot
     = render "_footer.html", assigns
