--- a/lib/web/templates/map/index.html.slim
+++ b/lib/web/templates/map/index.html.slim
@@ -1,14 +1,7 @@
-.hero.is-fullheight
-  .hero-head
-    = render "_header.html", assigns
-  
-  .hero-body
-    .content
-      .content-column.content-form
-        = render "_form.html", assigns
-      .content-column.content-map
-        #map
-        = render "_summary.html", assigns
-
-  .hero-foot
-    = render "_footer.html", assigns
+.content
+  .content-column.content-form
+    = render "_form.html", assigns
+  .content-column.content-map
+    #map
+    = render "_summary.html", assigns
+= render "_scripts.html", assigns
