--- a/lib/web/templates/layout/app.html.heex
+++ b/lib/web/templates/layout/app.html.heex
@@ -9,8 +9,9 @@
       content="Interaktive Übersicht der Verkehrsunfälle mit Verunglückten in Köln basierend auf Unfalldaten der Polizei NRW. Ein Projekt des ADFC Köln."
     />
     <title>Verkehrsunfälle Köln - Eine Übersicht des ADFC Köln</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.css" rel="stylesheet" />
-    <link rel="stylesheet" href={Routes.static_path(@conn, "/css/app.css")} />
+    <link rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
   </head>
   <body>
     <%= render("_flashes.html", assigns) %>
